[workspace]
members = [
  "caka",
  "guessing_game",
  "convert_temperature",
  "fibonacci",
  "minigrep",
  "sarap",
  "ferris_say",
  "gemini",
]
resolver = "2"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
